Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28669

Mac: transient scrollbar flashing is broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.1
    • 5.0.0 RC 2
    • None
    • OSX >= 10.7
    • macOS
    • 9f962612dafc4efaf44b9bc546b35c60a297a577

    Description

      A transient scrollbar gets stuck visible when its in the end.

      Steps to reproduce:

      • qtbase/examples/widgets/mainwindows/application
      • enter content
      • scroll to the end
      • scroll downwards to flash the scrollbar
        -> the scrollbar does not fade out

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes