Mac: fix transient QScrollBar flashing

Task-number: QTBUG-28669
Change-Id: I9825584f15c34709f7897533220911b6bf3ea21d
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>

cregit: 9f962612dafc4efaf44b9bc546b35c60a297a577 https://github.com/qt/qtbase/commit/9f962612dafc4efaf44b9bc546b35c60a297a577